# kokoro-tvm

./: .gitignore  .gitmodules  AGENTS.md  README.md  TODOs.md
NOTES/: DECODER_NAN_DEBUG_PLAN.md  DECODER_PORTING_INSIGHTS.md  FLUTTER_PACKAGE_BOOTSTRAP.md  FLUTTER_RUST_BRIDGE_ARCH.md  GDR_TVM_OP_SUPPORT.md  IOS_BUILD_PLAN.md  LLVM_DEBUG_INFO_ISSUE.md  LSTM_IR_EXPLOSION_INVESTIGATION.md  LSTM_PACKED_SEMANTICS_ISSUE.md  LSTM_SEMANTICS_MISMATCH.md  LSTM_TO_TRANSFORMER_DISTILLATION.md  MPS_LSTM_FEASIBILITY.md  PROGRESS_OFFSETS_FEASIBILITY.md  RELAX_LSTM_FIX_PROPOSAL.md  RUST_INFERENCE_PORT.md  RUST_TVM_FFI_FINDINGS.md  STATIC_PADDING_ACCURACY.md  TORCH_EXPORT_DEBUGGING.md  TVM_DYNAMIC_SHAPE_LIMITATIONS.md  VOICES_JSON_SCHEMA.md  WEBGPU_SUPPORT.md  llvm_dbg_declare_bug_repro.py  tvm-mps-build-breakage.md
docs/: component_analysis.md
experiments/: adain_import.py  albert_import.py  duration_encoder_import.py  duration_encoder_static.py  full_pipeline_test.py  lstm_import.py  lstm_import_dynamic.py  prosody_import.py  text_encoder_import.py
experiments/lstm/: ir_explosion_diagnosis.py  relax_loop_prototype.py  relax_lstm_full.py  tir_lstm_prototype.py
python/: pyproject.toml
python/scripts/: convert_assets.py
python/src/kokoro_tvm/: __init__.py  config.py  debug_utils.py  pipeline.py  tvm_extensions.py  validation.py
python/src/kokoro_tvm/cli/: __init__.py  compile_kokoro.py  inference.py  port_decoder.py  port_encoder.py  probe_decoder.py  probe_decoder_full.py  probe_weightnorm_conv1d.py  profiler.py  tune.py  validate_e2e.py  validate_steps.py
python/src/kokoro_tvm/models/: __init__.py  decoder.py  decoder_probe.py  encoder.py  weightnorm_conv1d_probe.py
python/src/kokoro_tvm/ops/: __init__.py  lstm.py  lstm_custom_op.py  test_tir_lstm_accuracy.py  tir_lstm.py
python/src/kokoro_tvm/patches/: __init__.py  adain.py  lstm.py  modules.py  sinegen.py
python/src/kokoro_tvm/profiling/: __init__.py  benchmark.py
python/src/kokoro_tvm/tests/: test_e2e_audio_validation.py  test_encoder_accuracy.py  test_mps_lstm_accuracy.py  test_tir_lstm_accuracy.py
python/src/kokoro_tvm/tuning/: __init__.py  metaschedule.py
rust/: Cargo.toml  README.md  TODOs.md  build.rs
rust/src/: audio.rs  error.rs  frb_api.rs  frb_generated.rs  g2p.rs  lib.rs  main.rs  pipeline.rs  preprocessing.rs  runtime.rs  validation.rs  vocab.rs  voice.rs
rust/tests/: runtime_api.rs
scripts/: compile_kokoro.py  compile_onnx.py  inspect_kokoro_config.py  port_decoder.py  tvm_extensions.py
