[package]
name = "kokoro-tvm"
version = "0.1.0"
edition = "2021"
description = "Rust-based TVM inference for Kokoro TTS"
license = "Apache-2.0"

[dependencies]
# TVM FFI bindings
tvm-ffi = "0.1.0-alpha.0"

# Array operations
ndarray = "0.16"
ndarray-npy = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Audio output
hound = "3.5"

# Error handling
anyhow = "1.0"

[[bin]]
name = "kokoro-tvm"
path = "src/main.rs"

[lib]
name = "kokoro_tvm"
path = "src/lib.rs"
