[package]
name = "kokoro-tvm"
version = "0.1.0"
edition = "2021"
description = "Rust-based TVM inference for Kokoro TTS"
license = "Apache-2.0"

[dependencies]
# TVM FFI bindings
tvm-ffi = "0.1.0-alpha.0"

# Array operations
ndarray = "0.16"
ndarray-npy = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Audio output
hound = "3.5"

# Error handling
anyhow = "1.0"

# Dynamic library loading
libloading = "0.8"

# Flutter Rust Bridge (optional)
flutter_rust_bridge = { version = "2.5", optional = true }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "kokoro-tvm"
path = "src/main.rs"

[lib]
name = "kokoro_tvm"
path = "src/lib.rs"

[features]
default = []
frb = ["flutter_rust_bridge"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(frb_expand)"] }
